[package]
name = "gamepadremap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = { version = "0.10.2", features = ["serde-serialize"] }
enigo = { version = "0.1.2", features = ["with_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"